--- a/src/components/ui/cards/PricingCard.astro
+++ b/src/components/ui/cards/PricingCard.astro
@@ -477,7 +477,7 @@ const code = `
   }
 
   .plan-name {
-    margin: 0 0 1rem 0;
+    margin: 1.5rem 0 1rem 0;
     color: var(--text-color);
     font-size: 1.5rem;
     font-weight: 700;
